Add Java 25 support and reflection exception handling for module system
- Updated GitHub workflow to include Java 25 in build matrix
- Added exception handling for InaccessibleObjectException in ClassToTypeDef
- Wrapped getDeclaredClasses(), getDeclaredFields(), getDeclaredMethods(), and getDeclaredConstructors() calls
- Added warning messages when reflection fails due to module restrictions
- All existing tests pass

Co-authored-by: iocanel <402008+iocanel@users.noreply.github.com>